--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
     <link rel="stylesheet" href="assets/css/components.css">
 
 
-    <title>Biodata Lutfi</title>
+    <title>Hi! I'm Nabila</title>
 
     <style type="text/css" media="screen">
         .header-background {
-          background: url("assets/img/bgtop.jpg");
+          background: url("assets/img/header.jpg");
           background-repeat: no-repeat;
           background-size: cover;
           background-color: #06FFA4;
           background-position: center;
 
-          height:300px;
+          height:400px;
         }
 
         .container-content{
-          margin-top: -200px;
+          margin-top: -350px;
           max-width:  960px;
         }
 
@@ -43,18 +43,6 @@
           }
         }
 
-
-        .tooltip{ 
-          position:relative;
-          float:right;
-        }
-        .tooltip > .tooltip-inner {background-color: #eebf3f; padding:5px 15px; color:rgb(23,44,66); font-weight:bold; font-size:13px;}
-        .popOver + .tooltip > .tooltip-arrow {  border-left: 5px solid transparent; border-right: 5px solid transparent; border-top: 5px solid #eebf3f;}
-
-        section{
-          margin:100px auto; 
-          height:1000px;
-        }
         .progress{
           border-radius:12px;
           overflow:visible;
@@ -71,6 +59,10 @@
           font-weight: 600;
         }
 
+        .profile-picture {
+            width: 400px;
+        }
+
     </style>
   </head>
   <body>
@@ -82,39 +74,31 @@
         <!-- head bio -->
         <div class="row">
           <div class="col-12">
+            <div align="center">
+              <img alt="image" src="assets/img/undraw/undraw_contemplating_8t0x.svg" class="rounded-circle profile-picture">              
+            </div>
             <div class="card profile-widget">
+
               <div class="profile-widget-header">
-                <img alt="image" src="assets/img/undraw/undraw_laravel_and_vue_59tp.svg" class="rounded-circle profile-widget-picture" style="background-color: #29cf94">
+                
                  <div class="profile-widget-items">
                   <div class="profile-widget-item">
-                    <div class="profile-widget-item-label">Age</div>
-                    <div class="profile-widget-item-value">24</div>
+                    <div class="profile-widget-item-label">Projects</div>
+                    <div class="profile-widget-item-value"><a href="#" title="">72</a></div>
                   </div>
                   <div class="profile-widget-item">
-                    <div class="profile-widget-item-label">Email</div>
-                    <div class="profile-widget-item-value">ldmz2012@gmail.com</div>
+                    <div class="profile-widget-item-label">Portofolio</div>
+                    <div class="profile-widget-item-value"><a href="https://aphrodite997.github.io">aphrodite997.github.io</a></div>
                   </div>
                   <div class="profile-widget-item">
-                    <div class="profile-widget-item-label">Phone</div>
-                    <div class="profile-widget-item-value">+628221655793X</div>
+                    <div class="profile-widget-item-label">Github</div>
+                    <div class="profile-widget-item-value"><a href="https://github.com/aphrodite997">aphrodite997</a></div>
                   </div>
                 </div>
               </div>
-              <div class="profile-widget-description pb-0">
-                <div class="profile-widget-name">Lutfidmz <div class="text-muted d-inline font-weight-normal"><div class="slash"></div> Web Developer</div></div>
-                <p> I’m actually a teacher cleverly disguised as a successful web developer. Since it was relatively clear early on that it would be slightly more than difficult to make a living sitting under a tree while reading Que'an, I’ve focused my energies on the web, which happily has proven itself to be a wonderful decision.</p>
-              </div>
-              <div class="card-footer text-center pt-0">
-                <div class="font-weight-bold mb-2 text-small">Follow Me On</div>
-                <a href="https://fb.me/haides.amtari" class="btn btn-social-icon mr-1 btn-facebook">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="https://twitter.com/haidesamtari" class="btn btn-social-icon mr-1 btn-twitter">
-                  <i class="fab fa-twitter"></i>
-                </a>
-                <a href="https://github.com/lutfidmz" class="btn btn-social-icon mr-1 btn-github">
-                  <i class="fab fa-github"></i>
-                </a>
+              <div class="profile-widget-description pb-0 text-center">
+                <div class="profile-widget-name">Nabila Anisa <div class="text-muted d-inline font-weight-normal"><div class="slash"></div> Web Developer</div></div>
+                <p>I’m a web developer. I spend my whole day, practically every day, experimenting with HTML, CSS, and JavaScript; dabbling with Python and Ruby; and inhaling a wide variety of potentially useless information through a few hundred RSS feeds. I build websites that delight and inform. I do it well.</p>
               </div>
             </div>
           </div>
@@ -123,27 +107,27 @@
         <!-- progress -->
         <div class="row">
           <div class="col-sm-12 col-lg-6">
-            <div class="card-title">Hard Skills</div>
+            <div class="card-title text-center">Hard Skills</div>
             <div class="card card-success">
               <div class="card-body">
-                HTML5
+                HTML
                  <div class="progress mb-3">
-                    <div class="progress-bar bg-success" role="progressbar" data-width="25%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-info" role="progressbar" data-width="25%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="80"></div>
                   </div>
                   CSS
                   <div class="progress mb-3">
-                    <div class="progress-bar bg-info" role="progressbar" data-width="50%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-warning" role="progressbar" data-width="50%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  MYSQL
+                  JavaScript
                   <div class="progress mb-3">
-                    <div class="progress-bar bg-default" role="progressbar" data-width="100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-success" role="progressbar" data-width="100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                   
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-lg-6">
-            <div class="card-title">Soft Skills</div>
+            <div class="card-title text-center">Soft Skills</div>
             <div class="card card-success">
               <div class="card-body">
                 Communication
