--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 </div>
               </div>
               <div class="profile-widget-description pb-0 text-center">
-                <div class="profile-widget-name">Nabila Anisa <div class="text-muted d-inline font-weight-normal"><div class="slash"></div> Web Developer</div></div>
-                <p>I’m a web developer. I spend my whole day, practically every day, experimenting with HTML, CSS, and JavaScript; dabbling with Python and Ruby; and inhaling a wide variety of potentially useless information through a few hundred RSS feeds. I build websites that delight and inform. I do it well.</p>
+                <div class="profile-widget-name">Nabila Anisa <div class="text-muted d-inline font-weight-normal"><div class="slash"></div> Programmer</div></div>
+                <p>I’m a desktop programmer. I spend my whole day, practically every day, experimenting with Visual Basic, .NET, and SQL Server, and also dabbling with HTML5 and CSS; and inhaling a wide variety of potentially useless information through a few hundred RSS feeds. I build software that delight and inform. I do it well.</p>
               </div>
             </div>
           </div>
@@ -107,38 +107,38 @@
         <!-- progress -->
         <div class="row">
           <div class="col-sm-12 col-lg-6">
-            <div class="card-title text-center">Hard Skills</div>
+            <div class="card-title text-center">Desktop Programming</div>
             <div class="card card-success">
               <div class="card-body">
-                HTML
+                ASP .NET
                  <div class="progress mb-3">
                     <div class="progress-bar bg-info" role="progressbar" data-width="25%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="80"></div>
                   </div>
-                  CSS
+                  VB .NET
                   <div class="progress mb-3">
-                    <div class="progress-bar bg-warning" role="progressbar" data-width="50%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-warning" role="progressbar" data-width="50%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  JavaScript
+                  SQLServer
                   <div class="progress mb-3">
-                    <div class="progress-bar bg-success" role="progressbar" data-width="100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-success" role="progressbar" data-width="100%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                   
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-lg-6">
-            <div class="card-title text-center">Soft Skills</div>
+            <div class="card-title text-center">Web Programming</div>
             <div class="card card-success">
               <div class="card-body">
-                Communication
+                HTML5
                  <div class="progress mb-3">
                     <div class="progress-bar bg-success" role="progressbar" data-width="25%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  Language
+                  CSS
                   <div class="progress mb-3">
                     <div class="progress-bar bg-info" role="progressbar" data-width="50%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  General Knowledge
+                  JavaScript
                   <div class="progress mb-3">
                     <div class="progress-bar bg-warning" role="progressbar" data-width="75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
